--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>MrMars</title>
+<title>MrMars LOX</title>
 
 <!-- Новый красивый шрифт -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
@@ -123,4 +123,5 @@
 </script>
 
 </body>
+
 </html>
