--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>MrMars LOX</title>
+<title>MrMars</title>
 
 <!-- Новый красивый шрифт -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
@@ -125,3 +125,4 @@
 </body>
 
 </html>
+
