--- a/index.html
+++ b/index.html
@@ -4,30 +4,92 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>MrMars</title>
+
 <style>
 * { margin:0; padding:0; box-sizing:border-box; }
-body, html { height:100vh; font-family: 'Poppins', sans-serif; color:white; overflow:hidden; }
+body, html { height:100vh; font-family:'Poppins',sans-serif; color:white; overflow:hidden; }
 
 /* Видео фон */
-.video-bg { position: fixed; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:-2; transition: opacity 1s; }
-.overlay { position: fixed; width:100%; height:100%; background: rgba(0,0,0,0.2); z-index:-1; }
+.video-bg{
+  position:fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  object-fit:cover;
+  z-index:-2;
+  transition:opacity 0.8s ease;
+}
+.video-bg.fade-out{ opacity:0; }
+
+.overlay{
+  position:fixed;
+  width:100%; height:100%;
+  background:rgba(0,0,0,0.25);
+  z-index:-1;
+}
 
 /* Контент */
-.container { position: relative; width:100%; max-width:360px; margin:auto; top:50%; transform:translateY(-50%); text-align:center; }
-.avatar { width:140px; height:140px; border-radius:50%; cursor:pointer; border:3px solid rgba(255,255,255,0.4); object-fit:cover; box-shadow:0 0 20px rgba(255,255,255,0.7); transition: transform 0.2s, box-shadow 0.2s; }
-.avatar.active { transform: scale(1.1); box-shadow: 0 0 40px rgba(0,255,255,0.8); }
+.container{
+  position:relative;
+  width:100%;
+  max-width:360px;
+  margin:auto;
+  top:50%;
+  transform:translateY(-50%);
+  text-align:center;
+}
 
-/* Кнопки соцсетей */
-.btn { display:block; width:220px; margin:12px auto; padding:15px; border-radius:30px; background:rgba(255,255,255,0.15); color:white; font-weight:600; font-size:16px; text-decoration:none; cursor:pointer; backdrop-filter:blur(5px); text-shadow: 0 2px 6px rgba(0,0,0,0.5); letter-spacing:0.5px; opacity:0; transform:translateY(30px); transition: transform 0.3s, background 0.3s, box-shadow 0.3s; }
-.btn:hover { background: linear-gradient(135deg,#612d31,#5c1924); transform:translateY(0) scale(1.08); box-shadow:0 0 20px rgba(255,255,255,0.6); }
+.avatar{
+  width:140px;
+  height:140px;
+  border-radius:50%;
+  cursor:pointer;
+  border:3px solid rgba(255,255,255,0.4);
+  object-fit:cover;
+  box-shadow:0 0 20px rgba(255,255,255,0.7);
+  transition:transform 0.3s, box-shadow 0.3s;
+}
+.avatar.active{
+  transform:scale(1.12);
+  box-shadow:0 0 50px rgba(0,255,255,0.9);
+}
 
-@keyframes appear { to{ opacity:1; transform:translateY(0);} }
-@media(max-width:480px){ .avatar{ width:100px; height:100px;} .btn{ width:180px; padding:12px; font-size:14px;} }
+/* Кнопки */
+.btn{
+  display:block;
+  width:220px;
+  margin:12px auto;
+  padding:15px;
+  border-radius:30px;
+  background:rgba(255,255,255,0.15);
+  color:white;
+  font-weight:600;
+  font-size:16px;
+  text-decoration:none;
+  cursor:pointer;
+  backdrop-filter:blur(5px);
+  text-shadow:0 2px 6px rgba(0,0,0,0.5);
+  letter-spacing:0.5px;
+  opacity:0;
+  transform:translateY(30px);
+  transition:transform 0.3s, background 0.3s, box-shadow 0.3s;
+}
+.btn:hover{
+  background:linear-gradient(135deg,#612d31,#5c1924);
+  transform:translateY(0) scale(1.08);
+  box-shadow:0 0 20px rgba(255,255,255,0.6);
+}
+
+@keyframes appear{ to{ opacity:1; transform:translateY(0);} }
+
+@media(max-width:480px){
+  .avatar{ width:100px; height:100px; }
+  .btn{ width:180px; padding:12px; font-size:14px; }
+}
 </style>
 </head>
 <body>
 
-<!-- Видео фон -->
+<!-- Видео -->
 <video id="videoBg" class="video-bg" autoplay muted loop playsinline>
   <source src="fon/folt.mp4" type="video/mp4">
 </video>
@@ -35,7 +97,7 @@ body, html { height:100vh; font-family: 'Poppins', sans-serif; color:white; over
 
 <!-- Контент -->
 <div class="container">
-  <img src="Img/channels4_profile.jpg" alt="Avatar" class="avatar" id="avatar">
+  <img src="Img/channels4_profile.jpg" class="avatar" id="avatar">
 
   <a href="https://www.youtube.com/@MrMars19837/videos" class="btn">YouTube</a>
   <a href="https://rutube.ru/channel/48835169" class="btn">RUTUBE</a>
@@ -48,48 +110,74 @@ body, html { height:100vh; font-family: 'Poppins', sans-serif; color:white; over
 <!-- Музыка -->
 <audio id="bgMusic" loop>
   <source src="mp3/mort.mp3" type="audio/mpeg">
-  Ваш браузер не поддерживает аудио.
 </audio>
 
 <script>
-// Анимация появления кнопок
+// Анимация кнопок
 const buttons = document.querySelectorAll('.btn');
 buttons.forEach((btn, i) => {
   btn.style.animation = `appear 0.5s forwards ${i*0.2 + 0.2}s`;
 });
 
-// Клики на аватарку для смены фона и включения музыки
 const avatar = document.getElementById('avatar');
 const bgMusic = document.getElementById('bgMusic');
 const videoBg = document.getElementById('videoBg');
 
 let clickCount = 0;
 let musicPlaying = false;
-let newBackground = false;
+let isSwitching = false;
+
+// Функция плавной смены видео с ПОЛНЫМ перезапуском
+function changeVideo(path){
+  if(isSwitching) return;
+  isSwitching = true;
+
+  videoBg.classList.add("fade-out");
+
+  setTimeout(() => {
+    videoBg.pause();
+    videoBg.currentTime = 0;
+
+    const source = videoBg.querySelector("source");
+    source.src = path;
+
+    videoBg.load();
+    videoBg.currentTime = 0;
+    videoBg.play();
+
+    videoBg.classList.remove("fade-out");
+
+    setTimeout(() => {
+      isSwitching = false;
+    }, 800);
+
+  }, 400);
+}
 
 avatar.addEventListener('click', () => {
   clickCount++;
+
   if(clickCount >= 3){
+
     if(!musicPlaying){
+      bgMusic.currentTime = 0;
       bgMusic.play();
+
       avatar.classList.add('active');
+      changeVideo('fon2/mortol.mp4');
+
       musicPlaying = true;
-      // смена фона на новый
-      videoBg.src = 'fon2/mortol.mp4'; // укажите путь к новому фону
-      videoBg.play();
-      newBackground = true;
     } else {
       bgMusic.pause();
+      bgMusic.currentTime = 0;
+
       avatar.classList.remove('active');
+      changeVideo('fon/folt.mp4');
+
       musicPlaying = false;
-      // вернем старый фон
-      if(newBackground){
-        videoBg.src = 'fon/folt.mp4';
-        videoBg.play();
-        newBackground = false;
-      }
     }
-    clickCount = 0; // сброс после действия
+
+    clickCount = 0;
   }
 });
 </script>
