--- a/index.html
+++ b/index.html
@@ -4,81 +4,70 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>MrMars</title>
-
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
 body,html{height:100vh;font-family:'Poppins',sans-serif;color:white;overflow:hidden;}
 
 .video-bg{
-  position:fixed;
-  top:0;left:0;
-  width:100%;height:100%;
-  object-fit:cover;
-  z-index:-2;
-  transition:opacity 0.8s ease;
+  position:fixed; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:-2;
+  opacity:1;
+  transition: opacity 1s ease;
 }
-.video-bg.fade-out{opacity:0;}
 
 .overlay{
-  position:fixed;
-  width:100%;height:100%;
-  background:rgba(0,0,0,0.25);
-  z-index:-1;
+  position:fixed; width:100%; height:100%; background:rgba(0,0,0,0.25); z-index:-1;
 }
 
 .container{
-  position:relative;
-  width:100%;
-  max-width:360px;
-  margin:auto;
-  top:50%;
-  transform:translateY(-50%);
+  position:relative; width:100%; max-width:360px; margin:auto; top:50%; transform:translateY(-50%);
   text-align:center;
 }
 
 .avatar{
-  width:140px;
-  height:140px;
-  border-radius:50%;
-  cursor:pointer;
-  border:3px solid rgba(255,255,255,0.4);
-  object-fit:cover;
-  box-shadow:0 0 20px rgba(255,255,255,0.7);
-  transition:transform 0.3s, box-shadow 0.3s;
+  width:140px; height:140px; border-radius:50%; cursor:pointer; border:3px solid rgba(255,255,255,0.4);
+  object-fit:cover; box-shadow:0 0 20px rgba(255,255,255,0.7); transition:transform 0.3s, box-shadow 0.3s;
 }
 .avatar.active{
-  transform:scale(1.12);
-  box-shadow:0 0 50px rgba(0,255,255,0.9);
+  transform:scale(1.15);
+  box-shadow:0 0 80px rgba(0,255,255,1);
+  transition: transform 0.8s ease, box-shadow 0.8s ease;
 }
 
-.btn{
-  display:block;
-  width:220px;
-  margin:12px auto;
-  padding:15px;
-  border-radius:30px;
-  background:rgba(255,255,255,0.15);
-  color:white;
-  font-weight:600;
-  font-size:16px;
-  text-decoration:none;
-  backdrop-filter:blur(5px);
-  letter-spacing:0.5px;
-  opacity:0;
-  transform:translateY(30px);
+/* Папки */
+.folder{
+  margin:12px auto; width:220px; text-align:left; cursor:pointer;
+}
+.folder-btn{
+  display:block; width:100%; padding:15px; border-radius:30px; background:rgba(255,255,255,0.15);
+  color:white; font-weight:600; font-size:16px; text-decoration:none; backdrop-filter:blur(5px);
+  letter-spacing:0.5px; transition:0.3s; position:relative;
+}
+.folder-btn::after{
+  content:" ▼"; position:absolute; right:20px; transition: transform 0.3s;
+}
+.folder-btn.open::after{
+  transform:rotate(180deg);
+}
+.folder-btn:hover{
+  background:linear-gradient(135deg,#612d31,#5c1924); transform:scale(1.05); box-shadow:0 0 20px rgba(255,255,255,0.6);
+}
+
+/* Контент папки */
+.folder-content{
+  max-height:0; overflow:hidden; transition:max-height 0.3s ease; margin-top:5px;
+}
+.folder-content a{
+  display:block; padding:10px 15px; margin:3px 0; border-radius:20px;
+  background:rgba(255,255,255,0.1); color:white; text-decoration:none; font-size:14px;
   transition:0.3s;
 }
-.btn:hover{
-  background:linear-gradient(135deg,#612d31,#5c1924);
-  transform:scale(1.08);
-  box-shadow:0 0 20px rgba(255,255,255,0.6);
+.folder-content a:hover{
+  background:rgba(255,255,255,0.3);
 }
 
-@keyframes appear{to{opacity:1;transform:translateY(0);}}
-
-@media(max-width:480px){
-  .avatar{width:100px;height:100px;}
-  .btn{width:180px;padding:12px;font-size:14px;}
+/* Адаптивность */
+@media (min-width: 768px) {
+  .container {max-width:480px;}
 }
 </style>
 </head>
@@ -90,93 +79,144 @@ body,html{height:100vh;font-family:'Poppins',sans-serif;color:white;overflow:hid
 <div class="overlay"></div>
 
 <div class="container">
-  <img src="Img/channels4_profile.jpg" class="avatar" id="avatar">
+  <img src="Img/channels4_profile.jpg" class="avatar" id="avatar" alt="Аватар MrMars">
 
-  <a href="https://www.youtube.com/@MrMars19837/videos" class="btn">YouTube</a>
-  <a href="https://rutube.ru/channel/48835169" class="btn">RUTUBE</a>
-  <a href="https://www.tiktok.com/@mrmars1983783" class="btn">TikTok</a>
-  <a href="https://vkvideo.ru/@club230784444" class="btn">VK Видео</a>
-  <a href="https://vk.com/gorbachuk0" class="btn">VK Профиль</a>
-  <a href="https://vk.me/join/MK4DXzal9yFLnyZkTXu8X5PfG6i_MrmfpmQ=" class="btn">VK Беседа</a>
+  <!-- YouTube -->
+  <div class="folder">
+    <div class="folder-btn">YouTube</div>
+    <div class="folder-content">
+      <a href="https://www.youtube.com/@MrMars19837/videos">Главный канал</a>
+      <a href="https://www.youtube.com/@MrMars19837/shorts">Shorts</a>
+    </div>
+  </div>
+
+  <!-- RUTUBE -->
+  <div class="folder">
+    <div class="folder-btn">RUTUBE</div>
+    <div class="folder-content">
+      <a href="https://rutube.ru/channel/48835169">Главный канал</a>
+      <a href="https://rutube.ru/playlist/12345">Плейлист</a>
+    </div>
+  </div>
+
+  <!-- TikTok -->
+  <div class="folder">
+    <div class="folder-btn">TikTok</div>
+    <div class="folder-content">
+      <a href="https://www.tiktok.com/@mrmars1983783">Профиль</a>
+    </div>
+  </div>
+
+  <!-- VK -->
+  <div class="folder">
+    <div class="folder-btn">VK</div>
+    <div class="folder-content">
+      <a href="https://vk.com/gorbachuk0">Профиль</a>
+      <a href="https://vkvideo.ru/@club230784444">Видео</a>
+      <a href="https://vk.me/join/MK4DXzal9yFLnyZkTXu8X5PfG6i_MrmfpmQ=">Беседа</a>
+    </div>
+  </div>
 </div>
 
-<!-- ОДИН аудио элемент -->
 <audio id="bgMusic" loop></audio>
 
 <script>
-document.querySelectorAll('.btn').forEach((btn,i)=>{
-  btn.style.animation=`appear .5s forwards ${i*0.2+.2}s`;
-});
+const avatar = document.getElementById('avatar');
+const bgMusic = document.getElementById('bgMusic');
+const videoBg = document.getElementById('videoBg');
 
-const avatar=document.getElementById('avatar');
-const bgMusic=document.getElementById('bgMusic');
-const videoBg=document.getElementById('videoBg');
+let clickCount = 0;
+let musicMode = 1;
+let isSwitching = false;
 
-let clickCount=0;
-let musicMode=1; // 1 = стартовая музыка, 2 = mort.mp3
-let isSwitching=false;
-
-/* ===== АВТОЗАПУСК ПЕРВОЙ МУЗЫКИ ===== */
-window.addEventListener("load",()=>{
+// Автозапуск музыки
+window.addEventListener("load", ()=>{
   bgMusic.src="mp3n1/mr-mars-pidor.mp3";
   bgMusic.volume=0.7;
+  bgMusic.play().catch(()=>{document.addEventListener("click",()=>{bgMusic.play();},{once:true});});
+});
 
-  bgMusic.play().catch(()=>{
-    document.addEventListener("click",()=>{
-      bgMusic.play();
-    },{once:true});
+// Плавная смена видео и музыки
+function changeVideoSmooth(path, newMusic){
+  if(isSwitching) return;
+  isSwitching = true;
+
+  // fade-out видео
+  videoBg.style.opacity = 0;
+
+  // плавное уменьшение громкости старой музыки
+  const oldVolume = bgMusic.volume;
+  let fadeOut = setInterval(()=>{
+    if(bgMusic.volume > 0.05) bgMusic.volume -= 0.05;
+    else { bgMusic.volume = 0; clearInterval(fadeOut); }
+  },50);
+
+  setTimeout(()=>{
+    // смена видео и музыки
+    videoBg.querySelector("source").src = path;
+    videoBg.load();
+    videoBg.play();
+
+    bgMusic.src = newMusic;
+    bgMusic.volume = 0;
+    bgMusic.play();
+
+    // fade-in музыки
+    let fadeIn = setInterval(()=>{
+      if(bgMusic.volume < oldVolume) bgMusic.volume += 0.05;
+      else { bgMusic.volume = oldVolume; clearInterval(fadeIn); }
+    },50);
+
+    videoBg.style.opacity = 1; // fade-in видео
+    setTimeout(()=>{ isSwitching=false; },1000);
+  },800);
+}
+
+// Клик по аватарке
+avatar.addEventListener('click', ()=>{
+  clickCount++;
+  if(clickCount >= 3){
+    clickCount = 0;
+    if(musicMode === 1){
+      avatar.classList.add("active");
+      changeVideoSmooth("fon2/mortol.mp4","mp3/mort.mp3");
+      musicMode = 2;
+    } else {
+      avatar.classList.remove("active");
+      changeVideoSmooth("fon/folt.mp4","mp3n1/mr-mars-pidor.mp3");
+      musicMode = 1;
+    }
+  }
+});
+
+// Папки
+document.querySelectorAll('.folder-btn').forEach(btn=>{
+  btn.addEventListener('click', ()=>{
+    const content = btn.nextElementSibling;
+    // закрыть все кроме текущей
+    document.querySelectorAll('.folder-content').forEach(fc=>{
+      if(fc!==content) fc.style.maxHeight = "0";
+    });
+    document.querySelectorAll('.folder-btn').forEach(b=>{
+      if(b!==btn) b.classList.remove('open');
+    });
+    // переключение текущей
+    if(content.style.maxHeight && content.style.maxHeight!=="0px"){
+      content.style.maxHeight = "0";
+      btn.classList.remove('open');
+    } else {
+      content.style.maxHeight = content.scrollHeight + "px";
+      btn.classList.add('open');
+    }
   });
 });
 
-/* ===== СМЕНА ВИДЕО ===== */
-function changeVideo(path){
-  if(isSwitching) return;
-  isSwitching=true;
-
-  videoBg.classList.add("fade-out");
-
-  setTimeout(()=>{
-    videoBg.pause();
-    videoBg.currentTime=0;
-
-    const source=videoBg.querySelector("source");
-    source.src=path;
-
-    videoBg.load();
-    videoBg.currentTime=0;
-    videoBg.play();
-
-    videoBg.classList.remove("fade-out");
-
-    setTimeout(()=>{isSwitching=false;},800);
-
-  },400);
-}
-
-/* ===== 3 КЛИКА ===== */
-avatar.addEventListener('click',()=>{
-  clickCount++;
-
-  if(clickCount>=3){
-
-    bgMusic.pause();
-    bgMusic.currentTime=0;
-
-    if(musicMode===1){
-      bgMusic.src="mp3/mort.mp3";
-      changeVideo("fon2/mortol.mp4");
-      avatar.classList.add("active");
-      musicMode=2;
-    }else{
-      bgMusic.src="mp3n1/mr-mars-pidor.mp3";
-      changeVideo("fon/folt.mp4");
-      avatar.classList.remove("active");
-      musicMode=1;
-    }
-
-    bgMusic.play();
-    clickCount=0;
-  }
+// ссылки переходят в той же вкладке
+document.querySelectorAll('.folder-content a').forEach(link=>{
+  link.addEventListener('click', e=>{
+    e.preventDefault();
+    window.location.href = link.href;
+  });
 });
 </script>
 
